--- a/mdns/build.gradle
+++ b/mdns/build.gradle
@@ -8,11 +8,7 @@ android {
         targetSdkVersion 24
         versionCode 625
         versionName "625.41.2"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        consumerProguardFiles 'proguard-rules.pro'
         }
     }
     externalNativeBuild {
